--- a/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Biblioteczka/Areas/Identity/Pages/Account/Register.cshtml
@@ -18,28 +18,22 @@
 			<div asp-validation-summary="ModelOnly" class="text-danger"></div>
 			<div class="mb-3">
 				<label asp-for="Input.UserName">Login</label>
-				<input asp-for="Input.UserName" class="form-control"
-					data-val-required="Pole Login jest wymagane."/>
+				<input asp-for="Input.UserName" class="form-control"/>
 				<span asp-validation-for="Input.UserName" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.Email">Email</label>
-				<input asp-for="Input.Email" class="form-control"
-					data-val-email="Pole Email nie jest prawidłowym adresem email." 
-					data-val-required="Pole Email jest wymagane."/>
+				<input asp-for="Input.Email" class="form-control"/>
 				<span asp-validation-for="Input.Email" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.Password">Hasło</label>
-				<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" 
-					data-val-required="Pole Hasło jest wymagane."
-					data-val-length="Hasło musi mieć co najmniej 6 i maksymalnie 100 znaków." />
+				<input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true"/>
 				<span asp-validation-for="Input.Password" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.ConfirmPassword">Potwierdź hasło</label>
-				<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"
-					data-val-equalto="Hasło i hasło potwierdzające nie pasują do siebie."/>
+				<input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true"/>
 				<span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
 			</div>
 
@@ -47,30 +41,27 @@
 			<h5>Dane dotyczące użytkownika</h5>
 			<div class="mb-3">
 				<label asp-for="Input.Name">Imię</label>
-				<input asp-for="Input.Name" class="form-control"
-					data-val-required="Pole Imię jest wymagane."/>
+				<input asp-for="Input.Name" class="form-control"/>
 				<span asp-validation-for="Input.Name" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.LastName">Nazwisko</label>
-				<input asp-for="Input.LastName" class="form-control"
-					data-val-required="Pole Nazwisko jest wymagane."/>
+				<input asp-for="Input.LastName" class="form-control"/>
 				<span asp-validation-for="Input.LastName" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.Pesel">Pesel</label>
-				<input asp-for="Input.Pesel" class="form-control" oninput="InpuNumber(this);" maxlength="11"
-					data-val-required="Pole Pesel jest wymagane."/>
+				<input asp-for="Input.Pesel" class="form-control"/>
 				<span asp-validation-for="Input.Pesel" class="text-danger"></span>
 			</div>
 			<div class="mb-3">
 				<label asp-for="Input.LibraryCardNumber">Numer karty bibliotecznej</label>
 				<div class="input-group">
 					<span class="input-group-text">LCD</span>
-					<input asp-for="Input.LibraryCardNumber" class="form-control" oninput="InpuNumber(this);" maxlength="8"/>		
+					<input asp-for="Input.LibraryCardNumber" class="form-control"/>		
 				</div>
 				<span asp-validation-for="Input.LibraryCardNumber" class="text-danger"></span>
-			</div>	
+			</div>
 
 			<button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary mb-4">Zarejestruj</button>
 		</form>
