--- a/Biblioteczka/Views/Book/Create.cshtml
+++ b/Biblioteczka/Views/Book/Create.cshtml
@@ -12,19 +12,21 @@
     <div class="bg-white rounded shadow p-4">
         <form asp-controller="Book" asp-action="Create" method="post" enctype="multipart/form-data">
             <partial name="Templates/_FormHeader" model="@ViewData["Title"]"/>
-            
-            <div class="mb-3">
-                <label for="Title">Tytuł</label>
-                <input id="Title" name="Book.Title" type="text" class="form-control" minlength="2" maxlength="100" required>
-            </div>
 
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
-                <label for="Author">Autor</label>
-                <select id="Author" name="Book.AuthorId" class="form-select">
+                <label asp-for="Book.Title"></label>
+			    <input asp-for="Book.Title" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.Title" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.AuthorId"></label>
+                <select id="Author" asp-for="Book.AuthorId" class="form-control">
                     @foreach (var Author in @Model.Authors){
                         <option value="@Author.Id">@Author.Name @Author.LastName</option>
                     }
                 </select>
+                <span asp-validation-for="Book.AuthorId"></span>
             </div>
             <script type="text/javascript">
                 $('#Author').select2({
@@ -39,27 +41,55 @@
             </script>
 
             <div class="mb-3">
-                <label for="Description">Opis</label>
-                <textarea id="Description" name="Book.Description" type="text" class="form-control" rows="4" minlength="3" maxlength="3000" required></textarea>
+                <label asp-for="Book.ISBN"></label>
+			    <input asp-for="Book.ISBN" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
             </div>
-
             <div class="mb-3">
-                <label for="File">Obraz</label>
-                <input id="File" name="File" type="file" class="form-control" onchange="preview(this);" accept="image/jpg,image/png,image/jpeg,image/gif" required>
+                <label asp-for="Book.IssueNumber"></label>
+			    <input asp-for="Book.IssueNumber" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.IssueNumber" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Series"></label>
+			    <input asp-for="Book.Series" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.Series" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Description"></label>
+			    <textarea asp-for="Book.Description" type="text" rows="4" class="form-control"></textarea>
+			    <span asp-validation-for="Book.Description" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <input id="File" asp-for="File" type="file" class="form-control" onchange="preview(this);" accept="image/jpg,image/png,image/jpeg,image/gif" required/>
+                <span asp-validation-for="File" class="text-danger"></span>
                 <img id="ImagePreview" name="ImagePreview" height="0" class="ms-auto me-auto d-block"/>
             </div>
-            
             <div class="mb-3">
-                <label for="Year">Rok</label>
-                <input id="Year" name="Book.Year" type="number" class="form-control" oninput="InpuNumber(this);" maxlength="4" required>
+                <label asp-for="Book.Year"></label>
+			    <input asp-for="Book.Year" type="number" class="form-control"/>
+			    <span asp-validation-for="Book.Year" class="text-danger"></span>          
             </div>
-
             <div class="mb-3">
-                <label for="City">Miasto</label>
-                <input id="City" name="Book.City" type="text" class="form-control" minlength="2" maxlength="100" required>
+                <label asp-for="Book.City"></label>
+			    <input asp-for="Book.City" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.City" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Publisher"></label>
+			    <input asp-for="Book.Publisher" type="text" class="form-control"/>
+			    <span asp-validation-for="Book.Publisher" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Pages"></label>
+			    <input asp-for="Book.Pages" type="number" class="form-control"/>
+			    <span asp-validation-for="Book.Pages" class="text-danger"></span>
             </div>
 
             <partial name="Templates/_FormButton"/>
         </form>
     </div>  
 </div>
+@section Scripts {
+	<partial name="_ValidationScriptsPartial" />
+}
