--- a/Biblioteczka/Views/Book/Edit.cshtml
+++ b/Biblioteczka/Views/Book/Edit.cshtml
@@ -12,39 +12,67 @@
     <div class="bg-white rounded shadow p-4">
         <form asp-controller="Book" asp-action="Edit" method="post" enctype="multipart/form-data">
             <partial name="Templates/_FormHeader" model="@ViewData["Title"]"/>
-        
+            
+            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
-                <label for="Title">Tytuł</label><br>
-                <input id="Title" name="Book.Title" type="text" class="form-control" minlength="2" maxlength="100" value="@Model.Book.Title" required/>
+                <label asp-for="Book.Title"></label>
+			    <input asp-for="Book.Title" type="text" class="form-control" value="@Model.Book.Title"/>
+			    <span asp-validation-for="Book.Title" class="text-danger"></span>
             </div>
-
             <div class="mb-3">
-                <label for="Author">Autor</label><br>
-                <p class="form-control">@Model.Author.Name @Model.Author.LastName</p>
+                <label asp-for="Book.AuthorId">Autor</label>
+                <p class="form-control">@Model.Name @Model.LastName</p>
             </div>
-
             <div class="mb-3">
-                <label for="Description">Opis</label><br>
-                <textarea id="Description" name="Book.Description" class="form-control" rows="4" minlength="3" maxlength="3000" required>@Model.Book.Description</textarea>
+                <label asp-for="Book.ISBN"></label>
+			    <input asp-for="Book.ISBN" type="text" class="form-control" value="@Model.Book.ISBN"/>
+			    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
             </div>
-
             <div class="mb-3">
-                <label for="File">Obraz</label><br>
+                <label asp-for="Book.IssueNumber"></label>
+			    <input asp-for="Book.IssueNumber" type="text" class="form-control" value="@Model.Book.IssueNumber"/>
+			    <span asp-validation-for="Book.IssueNumber" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Series"></label>
+			    <input asp-for="Book.Series" type="text" class="form-control" value="@Model.Book.Series"/>
+			    <span asp-validation-for="Book.Series" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Description"></label>
+			    <textarea asp-for="Book.Description" type="text" rows="4" class="form-control">@Model.Book.Description</textarea>
+			    <span asp-validation-for="Book.Description" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="File"></label>
                 <input id="File" name="File" type="file" class="form-control" onchange="preview(this);" accept="image/jpg,image/png,image/jpeg,image/gif">
                 <img id="ImagePreview" name="ImagePreview" src="~/images/@Model.Book.Image" height="250" class="ms-auto me-auto mt-4 d-block"/>
             </div>
-
             <div class="mb-3">
-                <label for="Year">Rok</label><br>
-                <input id="Year" name="Book.Year" type="number" class="form-control" oninput="InpuNumber(this);"  maxlength="4" value="@Model.Book.Year" required/>
+                <label asp-for="Book.Year"></label>
+			    <input asp-for="Book.Year" type="number" class="form-control" value="@Model.Book.Year"/>
+			    <span asp-validation-for="Book.Year" class="text-danger"></span>          
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.City"></label>
+			    <input asp-for="Book.City" type="text" class="form-control" value="@Model.Book.City"/>
+			    <span asp-validation-for="Book.City" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Publisher"></label>
+			    <input asp-for="Book.Publisher" type="text" class="form-control" value="@Model.Book.Publisher"/>
+			    <span asp-validation-for="Book.Publisher" class="text-danger"></span>
+            </div>
+            <div class="mb-3">
+                <label asp-for="Book.Pages"></label>
+			    <input asp-for="Book.Pages" type="number" class="form-control" value="@Model.Book.Pages"/>
+			    <span asp-validation-for="Book.Pages" class="text-danger"></span>
             </div>
 
-            <div class="mb-3">
-                <label for="City">Miasto</label><br>
-                <input id="City" name="Book.City" type="text" class="form-control" minlength="2" maxlength="100" value="@Model.Book.City" required/>
-            </div>
-        
             <partial name="Templates/_FormButton"/>
         </form>
     </div>
 </div>
+@section Scripts {
+	<partial name="_ValidationScriptsPartial" />
+}
