--- a/Biblioteczka/Views/Shared/Templates/_BookSelected.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_BookSelected.cshtml
@@ -15,7 +15,7 @@
                         else {
                             <h6 class="fw-bold">@Model[i].Title</h6>
                         }
-                        autor
+                        @Model[i].Author.Name @Model[i].Author.LastName
                     </div>
                 </a>
             </div>
