--- a/Biblioteczka/Views/Book/Create.cshtml
+++ b/Biblioteczka/Views/Book/Create.cshtml
@@ -15,12 +15,12 @@
 
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
-                <label asp-for="Book.Title"></label>
+                <label asp-for="Book.Title">Tytuł <span style="color: red;">*</span></label>
 			    <input asp-for="Book.Title" type="text" class="form-control"/>
 			    <span asp-validation-for="Book.Title" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Book.AuthorId"></label>
+                <label asp-for="Book.AuthorId">Autor <span style="color: red;">*</span></label>
                 <select id="Author" asp-for="Book.AuthorId" class="form-control">
                     @foreach (var Author in @Model.Authors){
                         <option value="@Author.Id">@Author.Name @Author.LastName</option>
@@ -41,7 +41,7 @@
             </script>
 
             <div class="mb-3">
-                <label asp-for="Book.ISBN"></label>
+                <label asp-for="Book.ISBN">ISBN <span style="color: red;">*</span></label>
 			    <input asp-for="Book.ISBN" type="text" class="form-control"/>
 			    <span asp-validation-for="Book.ISBN" class="text-danger"></span>
             </div>
@@ -56,28 +56,28 @@
 			    <span asp-validation-for="Book.Series" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Book.Description"></label>
+                <label asp-for="Book.Description">Opis <span style="color: red;">*</span></label>
 			    <textarea asp-for="Book.Description" type="text" rows="4" class="form-control"></textarea>
 			    <span asp-validation-for="Book.Description" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="File"></label>
+                <label asp-for="File">Okładka <span style="color: red;">*</span></label>
                 <input id="File" asp-for="File" type="file" class="form-control" onchange="preview(this);"/>
                 <span asp-validation-for="File" class="text-danger"></span>
                 <img id="ImagePreview" name="ImagePreview" height="0" class="ms-auto me-auto d-block"/>
             </div>
             <div class="mb-3">
-                <label asp-for="Book.Year"></label>
+                <label asp-for="Book.Year">Rok wydania <span style="color: red;">*</span></label>
 			    <input asp-for="Book.Year" type="number" class="form-control"/>
 			    <span asp-validation-for="Book.Year" class="text-danger"></span>          
             </div>
             <div class="mb-3">
-                <label asp-for="Book.City"></label>
+                <label asp-for="Book.City">Miejsce wydania <span style="color: red;">*</span></label>
 			    <input asp-for="Book.City" type="text" class="form-control"/>
 			    <span asp-validation-for="Book.City" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="Book.Publisher"></label>
+                <label asp-for="Book.Publisher">Wydawnictwo <span style="color: red;">*</span></label>
 			    <input asp-for="Book.Publisher" type="text" class="form-control"/>
 			    <span asp-validation-for="Book.Publisher" class="text-danger"></span>
             </div>
