--- a/Biblioteczka/Views/Shared/_Layout.cshtml
+++ b/Biblioteczka/Views/Shared/_Layout.cshtml
@@ -13,7 +13,6 @@
     <title>@ViewData["Title"] - Biblioteczka</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
-    <link rel="stylesheet" href="~/Biblioteczka.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 
 
@@ -83,8 +82,8 @@
     }
 
     <footer class="border-top footer text-muted" style="background-color: #FF9793;">
-        <div class="container text-center" style="height: 80px;">
-            <a class="text-decoration-none text-white">&copy; 2022 - Biblioteczka by Alicja Kulig</a>
+        <div class="container text-center">
+            <span class="text-decoration-none text-white">&copy; 2022 - Biblioteczka by Alicja Kulig</span>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
