--- a/Biblioteczka/wwwroot/css/site.css
+++ b/Biblioteczka/wwwroot/css/site.css
@@ -1,5 +1,6 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
+    background-color: #F2F2F2;
 }
 
 @media (min-width: 768px) {
@@ -9,12 +10,12 @@ html {
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  /*margin-bottom: 60px;*/
+    margin-bottom: 60px;
 }
 
 main {
@@ -22,7 +23,18 @@ main {
 }
 
 
+
+
+
 /**/
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    white-space: nowrap;
+    line-height: 60px;
+}
+
 .image {
     width: 100%;
     height: auto;
