Added select control to sort

--- a/Biblioteczka/Views/Author/Index.cshtml
+++ b/Biblioteczka/Views/Author/Index.cshtml
@@ -6,6 +6,7 @@
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
+<partial name="Templates/_SortBar" model="@Url.Action("Index")"/>
 
 <partial name="Templates/_AuthorList" model="@Model"/>
 <partial name="Templates/_Pagination" model="@paginationData"/>
