--- a/Biblioteczka/Views/Copy/Index.cshtml
+++ b/Biblioteczka/Views/Copy/Index.cshtml
@@ -7,8 +7,9 @@
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
-<partial name="Templates/_CopyListAdmin"/>
+<partial name="Templates/_SortBar" model="@Url.Action("Index")"/>
 
+<partial name="Templates/_CopyListAdmin"/>
 <partial name="Templates/_Pagination" model="@paginationData"/>
 
 
