--- a/Biblioteczka/Views/Shared/Templates/_CopyListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_CopyListAdmin.cshtml
@@ -8,24 +8,12 @@
         <thead>
             <tr>
                 <th scope="col">Id</th>
-                <th scope="col"><label class="me-2">Tytuł</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
+                <th scope="col">Tytuł</th>
                 <th scope="col">Okładka</th>
-                <th scope="col"><label class="me-2">Autor</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Numer</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
+                <th scope="col">Autor</th>
+                <th scope="col">Numer</th>
                 <th scope="col">Status</th>
-                <th scope="col"><label class="me-2">Data dodania</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Copy", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
+                <th scope="col">Data dodania</th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
