--- a/Biblioteczka/Views/Shared/Templates/_LoanList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_LoanList.cshtml
@@ -8,27 +8,12 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col"><label class="me-2">Tytuł</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Okładka</label></th>
-                <th scope="col"><label class="me-2">Autor</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Numer ezgemplarza</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Data wypożyczenia</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "LoanDateDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Data oddania</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Loan", new { sortOrder = "ReturnDateDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
+                <th scope="col">Tytuł</th>
+                <th scope="col">Okładka</th>
+                <th scope="col">Autor</th>
+                <th scope="col">Numer ezgemplarza</th>
+                <th scope="col">Data wypożyczenia</th>
+                <th scope="col">Data oddania</th>
             </tr>
         </thead>
 
