--- a/Biblioteczka/Views/Shared/Templates/_ReservationList.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_ReservationList.cshtml
@@ -7,23 +7,11 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col"><label class="me-2">Tytuł</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "TitleDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Okładka</label></th>
-                <th scope="col"><label class="me-2">Autor</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "LastNameDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Numer ezgemplarza</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "NumberDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
-                <th scope="col"><label class="me-2">Data</label>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateAsc" })"><i class="bi bi-arrow-up"></i></a>
-                    <a class="text-decoration-none text-dark" href="@Url.Action("Index", "Reservation", new { sortOrder = "DateDesc" })"><i class="bi bi-arrow-down"></i></a>
-                </th>
+                <th scope="col">Tytuł</th>
+                <th scope="col">Okładka</th>
+                <th scope="col">Autor</th>
+                <th scope="col">Numer ezgemplarza</th>
+                <th scope="col">Data</th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
