--- a/Biblioteczka/Views/User/Index.cshtml
+++ b/Biblioteczka/Views/User/Index.cshtml
@@ -11,6 +11,7 @@
 
 <partial name="Templates/_Alert" model="@TempData["Alert"]?.ToString()"/>
 <partial name="Templates/_SearchBar" model="@Url.Action("Index")"/>
+<partial name="Templates/_SortBar" model="@Url.Action("Index")"/>
 
 <partial name="Templates/_UserList" model="@Model"/>
 <partial name="Templates/_Pagination" model="@paginationData"/>
