--- a/Biblioteczka/Views/Shared/Templates/_ReservationListAdmin.cshtml
+++ b/Biblioteczka/Views/Shared/Templates/_ReservationListAdmin.cshtml
@@ -2,13 +2,13 @@
     <table class="table table-hover">
         <thead>
             <tr>
-                <th scope="col">Id</th>
-                <th scope="col">Użytkownik</th>
-                <th scope="col">Tytuł</th>
-                <th scope="col">Okładka</th>
-                <th scope="col">Autor</th>
+                <th scope="col" class="hide-sm hide-md">Id</th>
+                <th scope="col">Login</th>
+                <th scope="col" class="hide-sm">Tytuł</th>
+                <th scope="col" class="hide-sm">Okładka</th>
+                <th scope="col" class="hide-sm hide-md">Autor</th>
                 <th scope="col">Numer ezgemplarza</th>
-                <th scope="col">Data</th>
+                <th scope="col">Data rezerwacji</th>
                 <th scope="col" class="text-end"></th>
             </tr>
         </thead>
@@ -17,11 +17,11 @@
             @foreach (var List in @Model.ReservationList)
             {
                 <tr>
-                    <th scope="row">@List.Reservation.Id</th>
+                    <th scope="row" class="hide-sm hide-md">@List.Reservation.Id</th>
                     <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.UserBorrowingId" asp-controller="User" asp-action="Details">@List.User.UserName</a></td>                
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
-                    <td><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
-                    <td><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
+                    <td class="hide-sm"><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Book.Title</a></td>
+                    <td class="hide-sm"><img src="~/images/@List.Book.Image" style="object-fit: cover;" height="100"/></td>
+                    <td class="hide-sm hide-md"><a class="text-decoration-none text-dark" asp-route-id="@List.Author.Id" asp-controller="Author" asp-action="Details">@List.Author.Name @List.Author.LastName</a></td>
                     <td><a class="text-decoration-none text-dark" asp-route-id="@List.Reservation.BookId" asp-controller="Book" asp-action="Details">@List.Copy.Number</a></td>
                     <td>@List.Reservation.Date</td>
                     <td class="text-end">
