--- a/Biblioteczka/wwwroot/css/site.css
+++ b/Biblioteczka/wwwroot/css/site.css
@@ -56,7 +56,21 @@ a.sidebar-item.active {
     border-radius: 0rem;
 }
 
-
+@media (max-width: 576px) {
+    .hide-sm {
+        display: none;
+    }
+}
+@media (max-width: 768px) {
+    .hide-md {
+        display: none;
+    }
+}
+@media (max-width: 1200px) {
+    .hide-lg {
+        display: none;
+    }
+}
 
 
 /* Sidebar */
@@ -165,4 +179,5 @@ body.sb-sidenav-toggled #wrapper #sidebar-wrapper {
 .navbar-light .navbar-toggler-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba%28255, 255, 255, 1%29' stroke-linecap='round' stroke-miterlimit='10' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
+
 
